[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Trade.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 47
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0.32549, 0.0235294, 0.337255, 1 )
show_behind_parent = true
margin_right = 1029.0
margin_bottom = 610.0

[node name="Iron" type="Button" parent="."]
modulate = Color( 0.67451, 0.666667, 0.411765, 1 )
margin_left = 636.0
margin_top = 66.0
margin_right = 952.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 1 )
text = "Buy"

[node name="Steel" type="Button" parent="."]
modulate = Color( 0.67451, 0.666667, 0.411765, 1 )
margin_left = 637.0
margin_top = 200.0
margin_right = 953.0
margin_bottom = 278.0
custom_fonts/font = SubResource( 1 )
text = "Buy"

[node name="Ions" type="Button" parent="."]
modulate = Color( 0.67451, 0.666667, 0.411765, 1 )
margin_left = 640.0
margin_top = 334.0
margin_right = 956.0
margin_bottom = 412.0
custom_fonts/font = SubResource( 1 )
text = "Buy"

[node name="Quartz" type="Button" parent="."]
modulate = Color( 0.67451, 0.666667, 0.411765, 1 )
margin_left = 640.0
margin_top = 458.0
margin_right = 956.0
margin_bottom = 536.0
custom_fonts/font = SubResource( 1 )
text = "Buy"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 430.0
margin_top = 86.0
margin_right = 592.0
margin_bottom = 126.0
custom_fonts/normal_font = SubResource( 2 )
text = "Iron"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 425.0
margin_top = 210.0
margin_right = 587.0
margin_bottom = 250.0
custom_fonts/normal_font = SubResource( 2 )
text = "Steel"

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
margin_left = 419.0
margin_top = 335.0
margin_right = 581.0
margin_bottom = 375.0
custom_fonts/normal_font = SubResource( 2 )
text = "Ions"

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
margin_left = 416.0
margin_top = 459.0
margin_right = 578.0
margin_bottom = 499.0
custom_fonts/normal_font = SubResource( 2 )
text = "Quartz"

[node name="RichTextLabel5" type="RichTextLabel" parent="."]
modulate = Color( 0.721569, 0.678431, 0.435294, 1 )
margin_left = 432.0
margin_top = 116.0
margin_right = 616.0
margin_bottom = 156.0
custom_fonts/normal_font = SubResource( 3 )
text = "(Cost: 10 Quartz)"

[node name="RichTextLabel6" type="RichTextLabel" parent="."]
modulate = Color( 0.721569, 0.678431, 0.435294, 1 )
margin_left = 426.0
margin_top = 241.0
margin_right = 610.0
margin_bottom = 296.0
custom_fonts/normal_font = SubResource( 3 )
text = "(Cost: 10 Iron + Quartz)"

[node name="RichTextLabel7" type="RichTextLabel" parent="."]
modulate = Color( 0.721569, 0.678431, 0.435294, 1 )
margin_left = 426.0
margin_top = 368.0
margin_right = 610.0
margin_bottom = 422.0
custom_fonts/normal_font = SubResource( 3 )
text = "(Cost: 10 Iron + Carbon)"

[node name="RichTextLabel8" type="RichTextLabel" parent="."]
modulate = Color( 0.721569, 0.678431, 0.435294, 1 )
margin_left = 424.0
margin_top = 493.0
margin_right = 608.0
margin_bottom = 533.0
custom_fonts/normal_font = SubResource( 3 )
text = "(Cost: 10 Iron)"

[node name="RichTextLabel9" type="RichTextLabel" parent="."]
modulate = Color( 0.431373, 0.666667, 0.858824, 1 )
margin_left = 92.0
margin_top = 113.0
margin_right = 335.0
margin_bottom = 217.0
custom_fonts/normal_font = SubResource( 4 )
text = "Trade"

[node name="Button" type="Button" parent="."]
modulate = Color( 0.0627451, 0.172549, 0.333333, 1 )
margin_left = 32.0
margin_top = 218.0
margin_right = 385.0
margin_bottom = 292.0
custom_fonts/font = SubResource( 5 )
text = "Go Back"

[connection signal="pressed" from="Iron" to="." method="_on_Iron_pressed"]
[connection signal="pressed" from="Steel" to="." method="_on_Steel_pressed"]
[connection signal="pressed" from="Ions" to="." method="_on_Ions_pressed"]
[connection signal="pressed" from="Quartz" to="." method="_on_Quartz_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
